--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^6.0.3",
     "nanoid": "^5.1.6",
     "pinia": "^3.0.4",
-    "sass": "^1.97.3"
+    "sass": "^1.97.3",
+    "vue": "^3.5.27",
+    "vue-tsc": "^3.2.4"
   }
 }
