--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "pinia": "^3.0.4",
     "sass": "^1.97.3",
     "vue": "^3.5.27",
-    "vue-tsc": "^3.2.4"
+    "vue-router": "^4.6.4",
+    "vue-tsc": "^3.2.4",
+    "zod": "^4.3.6"
   }
 }
