--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@vitejs/plugin-vue": "^6.0.3",
+    "highlight.js": "^11.11.1",
     "nanoid": "^5.1.6",
     "pinia": "^3.0.4",
     "sass": "^1.97.3",
