--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pinia": "^3.0.4",
     "sass": "^1.97.3",
     "vue": "^3.5.27",
+    "vue-i18n": "^11.2.8",
     "vue-router": "^4.6.4",
     "vue-tsc": "^3.2.4",
     "zod": "^4.3.6"
