--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/vue3-jest": "^29.2.6",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.4.6",
-    "typescript": "~5.9.3",
-    "vite": "^7.2.4",
-    "storybook": "^10.2.1",
-    "@storybook/vue3-vite": "^10.2.1",
     "@chromatic-com/storybook": "^5.0.0",
-    "@storybook/addon-vitest": "^10.2.1",
     "@storybook/addon-a11y": "^10.2.1",
     "@storybook/addon-docs": "^10.2.1",
     "@storybook/addon-onboarding": "^10.2.1",
-    "vitest": "^4.0.18",
-    "playwright": "^1.58.0",
+    "@storybook/addon-vitest": "^10.2.1",
+    "@storybook/vue3-vite": "^10.2.1",
+    "@types/jest": "^29.5.12",
     "@vitest/browser-playwright": "^4.0.18",
-    "@vitest/coverage-v8": "^4.0.18"
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/vue3-jest": "^29.2.6",
+    "autoprefixer": "^10.4.23",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "playwright": "^1.58.0",
+    "postcss": "^8.5.6",
+    "storybook": "^10.2.1",
+    "ts-jest": "^29.4.6",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
