--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/addon-onboarding": "^10.2.1",
     "@storybook/addon-vitest": "^10.2.1",
     "@storybook/vue3-vite": "^10.2.1",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@vitest/browser-playwright": "^4.0.18",
     "@vitest/coverage-v8": "^4.0.18",
@@ -38,6 +39,7 @@
     "@cyhnkckali/vue3-color-picker": "^2.1.5",
     "@highlightjs/vue-plugin": "^2.1.0",
     "@vitejs/plugin-vue": "^6.0.3",
+    "dompurify": "^3.3.1",
     "highlight.js": "^11.11.1",
     "nanoid": "^5.1.6",
     "pinia": "^3.0.4",
