--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@vitejs/plugin-vue": "^6.0.3",
     "dompurify": "^3.3.1",
+    "driver.js": "^1.4.0",
     "highlight.js": "^11.11.1",
     "nanoid": "^5.1.6",
     "pinia": "^3.0.4",
